Cập nhật về cấu hình SELinux

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -29,6 +29,8 @@
 
 <img src="../../images/topo.png" />
 
+Trong bài hướng dẫn này, chúng tôi sẽ sử dụng 2 host. Host thứ nhất `nagios` dùng để cài Nagios Core làm server, host thứ 2 là `web01` làm client giám sát 2 dịch vụ `SSH` và `HTTP`.
+
 #### IP Planning
 
 <img src="../../images/IP-Planning.png" />
@@ -50,6 +52,14 @@ yum install gcc glibc glibc-common gd gd-devel make net-snmp openssl-devel xinet
 ```
 
 - Tắt SELinux 
+
+Tắt tức thời bằng lệnh:
+
+```
+setenforce 0
+```
+
+Chỉnh sửa file cấu hình của SELinux:
 
 ```
 vi /etc/sysconfig/selinux
@@ -193,11 +203,11 @@ make install
 
 - **Bước 3**: Thêm câu lệnh `check_nrpe`
 
-    - Mở file `/usr/local/nagios/etc/objects/command.cfg`:
+    - Mở file `/usr/local/nagios/etc/objects/commands.cfg`:
     
     
     ```
-    vi /usr/local/nagios/etc/objects/command.cfg
+    vi /usr/local/nagios/etc/objects/commands.cfg
     ```
     
     - Thêm câu lệnh sau:
