Update câu lệnh

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -65,7 +65,7 @@ Chỉnh sửa file cấu hình của SELinux:
 vi /etc/sysconfig/selinux
 ```
 
-Sửa dòng `SELINUX=permissive` thành `SELINUX=disable`.
+Sửa dòng `SELINUX=enforcing` thành `SELINUX=disable`.
 
 <a name="2.2"></a>
 #### 2.2 Tạo user cho Nagios
@@ -156,7 +156,6 @@ Khởi động lại Apache và chạy `nagios`, cho phép khởi động cùng 
 systemctl enable httpd
 systemctl restart httpd
 service nagios restart
-chkconfig nagios on
 ```
 
 Để kiểm tra, hãy truy cập vào giao diện Web và đăng nhập bằng `nagiosadmin` và Password vừa tạo ở địa chỉ:
@@ -428,7 +427,7 @@ define service {
 Sau khi sửa xong, chúng ta lưu lại file và khởi động lại nagios server.
 
 ```
-systemctl restart nagios.service
+service nagios restart
 ```
 
 <a name="3.1.4"></a>
