--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -93,6 +93,7 @@ usermod -a -G nagcmd apache
 Chúng ta tải Nagios Core về server. Tại thời điểm viết bài, phiên bản mới nhất là Nagios Core 4.3.1. Để cập nhật mới nhất, vui lòng bấm vào [đây](https://www.nagios.org/download/).
 
 ```sh
+cd /opt
 wget http://prdownloads.sourceforge.net/sourceforge/nagios/nagios-4.3.1.tar.gz
 ```
 
@@ -133,6 +134,7 @@ htpasswd -c /usr/local/nagios/etc/htpasswd.users nagiosadmin
 - **Bước 5**: Tải gói Plugin và giải nén
 
 ```sh
+cd /opt
 wget https://nagios-plugins.org/download/nagios-plugins-2.2.0.tar.gz
 tar xzf nagios-plugins-2.2.0.tar.gz
 ```
@@ -182,6 +184,7 @@ http://192.168.100.196/nagios
 - **Bước 1**: Tải và Giải nén source gói NRPE
 
 ```
+cd /opt
 curl -L -O http://downloads.sourceforge.net/project/nagios/nrpe-2.x/nrpe-2.15/nrpe-2.15.tar.gz
 
 tar xf nrpe-*.tar.gz
@@ -264,6 +267,8 @@ Trên host Linux cần giám sát, chúng ta cần thực hiện các bước sa
 ```
 vi /etc/nagios/nrpe.cfg
 ```
+
+*Ở bài này, host `web01` sử dụng OS là CentOS 7, vì vậy hãy làm theo những hướng dẫn cấu hình trên CentOS.*
     
 **Cho phép Server Nagios có quyền truy cập và sử dụng NRPE**
 
@@ -374,7 +379,7 @@ SSH:
 define service {
         use                             generic-service
         host_name                       web01
-        service_description             SSH Monitor
+        service_description             SSHMonitor
         check_command                   check_nrpe!check_ssh
 }
 ```
@@ -385,16 +390,16 @@ HTTP:
 define service {
         use                             generic-service
         host_name                       web01
-        service_description             HTTP Monitor
+        service_description             HTTPMonitor
         check_command                   check_nrpe!check_http
-        notifications_enabled           0
+        notifications_enabled           1
 }
 ```
 
 *Chú thích:*
 
 - `use generic-service`: Sử dụng templete có sẵn cho các dịch vụ
-- `notifications_enabled 0`: Tắt cảnh báo khi dịch vụ thay đổi trạng thái
+- `notifications_enabled 1`: Bật cảnh báo khi dịch vụ thay đổi trạng thái, 0 để tắt.
 
 Đây là file `web01.cfg` hoàn chỉnh, theo dõi 2 dịch vụ HTTP và SSH qua NRPE:
 
@@ -412,15 +417,14 @@ define host {
 define service {
         use                             generic-service
         host_name                       web01
-        service_description             SSH Monitor
+        service_description             SSHMonitor
         check_command                   check_nrpe!check_ssh
 }
 define service {
         use                             generic-service
         host_name                       web01
-        service_description             HTTP Monitor
+        service_description             HTTPMonitor
         check_command                   check_nrpe!check_http
-        notifications_enabled           0
 }
 ```
 
