--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -45,13 +45,22 @@ Link docs: https://goo.gl/yOim1o
 
 Để có thể cài đặt và sử dụng được Nagios Core, chúng ta phải cài đặt một số thư viện và các gói thư viện dịch vụ đi kèm.
 
-- Cài đặt các gói thư viện
+- **Bước 1:** Cài đặt các gói thư viện
 
 ```
 yum install gcc glibc glibc-common gd gd-devel make net-snmp openssl-devel xinetd unzip httpd php php-fpm curl wget -y
 ```
 
-- Tắt SELinux 
+- **Bước 2:** Mở port 80 cho HTTPD trên Firewalld
+
+Nếu server của bạn có sử dụng Firewalld, hãy mở port cho httpd bằng lệnh:
+
+```
+firewall-cmd --permanent --add-port=80/tcp
+firewall-cmd --reload
+```
+
+- **Bước 3:** Tắt SELinux 
 
 Tắt tức thời bằng lệnh:
 
