Update cai perl tren centos 7

--- a/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
+++ b/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
@@ -1,7 +1,5 @@
 ## Monitor RabbitMQ trong nagios
 
-**Bài lab được thực hiện trên Nagios Server - Ubuntu 16.04 vì cài perl trên CentOS 7 không thành công!**
-
 ### Nội dung
 
 - [ 1. Thông tin host ](#1)
@@ -44,6 +42,8 @@ rabbitmqctl set_permissions -p / mon ".*" ".*" ".*"
 
 **Cài đặt perl và gói `Monitoring::Plugins` trên Nagios server**
 
+- Trên Nagios sử dụng OS Ubuntu
+
 ```sh
 curl -L http://cpanmin.us | perl - --sudo App::cpanminus
 perl -MCPAN -e 'install Monitoring::Plugin'
@@ -51,8 +51,13 @@ perl -MCPAN -e 'install Config::Tiny'
 perl -MCPAN -e 'install JSON'
 perl -MCPAN -e 'install Math::Calc::Units'
 ```
-
 **Lưu ý**: Khi lần đầu chạy lệnh trên, CPAN sẽ yêu cầu một số thiết lập, bấm Enter để nhập mặc định.
+
+- Trên Nagios sử dụng OS CentOS
+
+```sh
+yum install -y perl-Monitoring-Plugin perl-Config-Tiny  perl-JSON* perl-Math-Calc-Units
+```
 
 <a name="2.2.2"></a>
 #### 2.2.2 Cài đặt Plugin trên Nagios Server
