Cai perl tren CentOS - OK

--- a/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
+++ b/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
@@ -56,7 +56,8 @@ perl -MCPAN -e 'install Math::Calc::Units'
 - Trên Nagios sử dụng OS CentOS
 
 ```sh
-yum install -y perl-Monitoring-Plugin perl-Config-Tiny  perl-JSON* perl-Math-Calc-Units
+yum install -y epel-release
+yum install -y perl-Monitoring-Plugin perl-Config-Tiny perl-JSON* perl-Math-Calc-Units
 ```
 
 <a name="2.2.2"></a>
