--- a/docs/thuchanh-nagios/8.Setup-Telegram-alert.md
+++ b/docs/thuchanh-nagios/8.Setup-Telegram-alert.md
@@ -1,6 +1,6 @@
 Tut này sẽ giới thiệu cách cấu hình Nagios gửi notificate cho Telegram.
 
-Tương tự bài viết [gửi thông báo bằng mail](https://github.com/locvx1234/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/3.Setup-Mail-alert.md), bài viết này cũng sẽ cấu hình gửi cho một người v một nhóm.
+Tương tự bài viết [gửi thông báo bằng mail](https://github.com/locvx1234/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/3.Setup-Mail-alert.md), bài viết này cũng sẽ cấu hình gửi cho một người và một nhóm.
 
 # 1. Cài đặt công cụ
 
@@ -121,18 +121,22 @@ Mục SERVICE TEMPLATES, comment dòng này trong `generic-service`
 #        contact_groups                  admins
 ```
 
-3. Kết quả
+# 3. Kết quả
 
 Thông báo gửi về cho một người
 
+![single](https://github.com/locvx1234/meditech-ghichep-nagios/blob/master/images/telegram-single.png)
+
 Thông báo gửi về cho một nhóm chat
 
+![group](https://github.com/locvx1234/meditech-ghichep-nagios/blob/master/images/telegram-group.png)
 
 Trong cấu hình trên có đồng thời gửi về gmail
 
+![gmail](https://github.com/locvx1234/meditech-ghichep-nagios/blob/master/images/gmail-report-ssh.png)
 
 
-4. Tham khảo
+# 4. Tham khảo
 
 https://pommi.nethuis.nl/nagios-notifications-via-telegram/
 
