--- a/docs/thuchanh-nagios/8.Setup-Telegram-alert.md
+++ b/docs/thuchanh-nagios/8.Setup-Telegram-alert.md
@@ -56,7 +56,7 @@ define contact{
         contact_name                    nagiosadmin		; Short name of user
 	    use				                generic-contact
         alias                           Nagios Admin		; Full name of user
-	    pager                           481523352           ; ID user received
+	    pager                           48152xxxx           ; ID user received
         email                           locvx1234@gmail.com ; Email received
         }
 
@@ -64,7 +64,7 @@ define contact {
   	    contact_name                    nagios_group
 	    use                             generic-contact
         alias                           Nagios Admin            ; Full name of user
-  	    pager                           -311090717              ; ID group chat
+  	    pager                           -31109xxxx              ; ID group chat
 }
 ```
 
